# ai-miden

./: .gitignore  .prettierrc  AGENTS.md  AGENT_BRAIN.md  README.md  dump.rdb
cortexcode/: COLAB_GUIDE.md  README.md  cortexcode.py  cortexcode_api.py  cortexcode_colab.ipynb  cortexcode_loop.py  cortexcode_torch.py
cortexcode/frontend/: index.html
docs/: AI_ROADMAP_FUTURE.md  FRONTIER_GAP_ANALYSIS.md  MASTER_CURRICULUM.md  ROADMAP.md  ROADMAP_v2.md  what_is_function.md  what_is_parameter.md  what_is_weight.md
docs/backend/: INDEX.md
docs/gm/: BIBLIOGRAPHY.md  HOW_TO_NAVIGATE.md  README.md
docs/jobs/: analyze_gaps.py
docs/nature/: BIBLIOGRAPHY.md  HOW_TO_NAVIGATE.md  README.md
docs/phase0/: SUMMARY.md  what_is_ai.md  what_is_input_output.md  what_is_prediction.md
docs/phase1/: SUMMARY.md  what_is_bias.md  what_is_model.md  what_is_numpy.md
docs/phase10/: SUMMARY.md  what_is_batch_normalization.md
docs/phase100/: SUMMARY.md  what_is_Attribution_Patching.md  what_is_Mechanistic_Interpretability.md  what_is_Sparse_Autoencoder.md
docs/phase101/: SUMMARY.md  what_is_constitutional_ai.md  what_is_debate_protocol.md  what_is_iterated_amplification.md
docs/phase102/: SUMMARY.md  what_is_rejection_sampling.md  what_is_self_improvement.md  what_is_verifier_augmented_generation.md
docs/phase103/: SUMMARY.md  what_is_clip_scoring.md  what_is_contrastive_filtering.md  what_is_temporal_alignment.md
docs/phase104/: SUMMARY.md  what_is_inductive_bias.md  what_is_neural_architecture_search.md  what_is_scaling_laws.md
docs/phase105/: SUMMARY.md  what_is_knowledge_distillation.md  what_is_neural_architecture_search_for_latency.md  what_is_quantization_aware_training.md
docs/phase106/: SUMMARY.md  what_is_diffusion_for_molecules.md  what_is_equivariant_networks.md  what_is_geometric_deep_learning.md
docs/phase107/: SUMMARY.md  what_is_flash_attention.md  what_is_mobile_llm.md  what_is_speculative_decoding.md
docs/phase108/: SUMMARY.md  what_is_cross_modal_attention.md  what_is_multimodal_cot.md  what_is_visual_question_answering.md
docs/phase109/: SUMMARY.md  what_is_dreamer.md  what_is_model_predictive_control.md  what_is_world_model.md
docs/phase11/: SUMMARY.md  what_is_convolution.md  what_is_filter.md  what_is_parameter_sharing.md  what_is_pooling.md
docs/phase110/: SUMMARY.md  what_is_refinement_loop.md  what_is_search_over_outputs.md  (+1 more)
docs_dsa/: BLENDED_DRILLS.md  COMPLEXITY_GUIDE.md  FINAL_CRAM.md  FLASHCARDS.md  IMPROVEMENTS.md  INTERVIEW_SIMULATION.md  INTERVIEW_SKILLS.md  LEARNING_SCHEDULE.md  MASTER_PLAN.md  NEETCODE_150.md  PEDAGOGY.md  PROGRESS_TRACKER.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  START_HERE.md
docs_web3/: MASTER_CURRICULUM.md
dreamcatcher/: README.md  dreamcatcher.py
learning-express-depth/: INDEX.md  README.md
logogen/: README.md  download.py  logogen.py  logogen_colab.ipynb
src/: phase0_basics.py  phase1_linear_regression.py
src_web3/: package.json  tsconfig.json
src_web3/phase10/pda_demo/: Cargo.toml
src_web3/phase10/pda_demo/src/: lib.rs
src_web3/phase11/cpi_demo/: Cargo.toml
src_web3/phase11/cpi_demo/src/: lib.rs
src_web3/phase12/spl_token/: Cargo.toml
src_web3/phase12/spl_token/src/: lib.rs
src_web3/phase13/vault/: Cargo.toml
src_web3/phase13/vault/src/: lib.rs
src_web3/phase15/multisig/: Cargo.toml
src_web3/phase15/multisig/src/: lib.rs
src_web3/phase16/amm/: Cargo.toml
src_web3/phase16/amm/src/: lib.rs
src_web3/phase17/liquidity_pool/: Cargo.toml
src_web3/phase17/liquidity_pool/src/: lib.rs
src_web3/phase18/staking/: Cargo.toml
src_web3/phase18/staking/src/: lib.rs
src_web3/phase19/lending/: Cargo.toml
src_web3/phase19/lending/src/: lib.rs
src_web3/phase20/timelock/: Cargo.toml
src_web3/phase20/timelock/src/: lib.rs
src_web3/phase21/nft_mint/: Cargo.toml
src_web3/phase21/nft_mint/src/: lib.rs
src_web3/phase22/nft_marketplace/: Cargo.toml
src_web3/phase22/nft_marketplace/src/: lib.rs
src_web3/phase23/upgrade_demo/: Cargo.toml  upgrade_script.sh
src_web3/phase23/upgrade_demo/src/: lib.rs
src_web3/phase51/limit_order/: Cargo.toml
src_web3/phase51/limit_order/src/: lib.rs
src_web3/phase53/escrow/: Cargo.toml
src_web3/phase53/escrow/src/: lib.rs
src_web3/phase53/marketplace/: Cargo.toml
src_web3/phase53/marketplace/src/: lib.rs
src_web3/phase54/governance/: Cargo.toml
src_web3/phase54/governance/src/: lib.rs
src_web3/phase54/treasury/: Cargo.toml
src_web3/phase54/treasury/src/: lib.rs
src_web3/phase54v2/governance/: Anchor.toml  Cargo.toml
src_web3/phase54v2/governance/programs/governance/src/: lib.rs
src_web3/phase54v2/governance/programs/treasury/src/: lib.rs
src_web3/phase55/boost/: Cargo.toml
src_web3/phase55/boost/src/: lib.rs
src_web3/phase55v2/farm/: Anchor.toml  Cargo.toml
src_web3/phase55v2/farm/programs/boost/src/: lib.rs
src_web3/phase55v2/farm/programs/farm/src/: lib.rs
src_web3/phase56/bridge/: Cargo.toml
src_web3/phase56/bridge/src/: lib.rs
src_web3/phase56/guardian/: Cargo.toml
src_web3/phase56/guardian/src/: lib.rs
src_web3/phase57/market/: Cargo.toml
src_web3/phase57/market/src/: lib.rs
src_web3/phase57/oracle/: Cargo.toml
src_web3/phase57/oracle/src/: lib.rs
src_web3/phase58/launchpad/: Cargo.toml
src_web3/phase58/launchpad/src/: lib.rs
src_web3/phase58v2/launchpad/: Anchor.toml  Cargo.toml
src_web3/phase58v2/launchpad/programs/launchpad/: Cargo.toml
src_web3/phase58v2/launchpad/programs/launchpad/src/: lib.rs
src_web3/phase58v2/launchpad/programs/vesting/: Cargo.toml
src_web3/phase58v2/launchpad/programs/vesting/src/: lib.rs
src_web3/phase59/counter/: Anchor.toml  Cargo.toml
src_web3/phase59/counter/programs/counter/src/: lib.rs
src_web3/phase59/counter/tests/: counter.ts
src_web3/phase62/token2022/: Anchor.toml  Cargo.toml
src_web3/phase62/token2022/programs/hook/src/: lib.rs
src_web3/phase62/token2022/programs/token/src/: lib.rs
src_web3/phase9/counter/: Cargo.toml
src_web3/phase9/counter/src/: lib.rs
visual-diff-mcp/: package.json  server.js
(+2611 files in other folders)
