[package]
# Name identifies this crate in the Solana ecosystem so other programs and clients can reference it.
name = "nft_marketplace"
# Version follows semantic versioning to track breaking changes and feature additions.
version = "0.1.0"
# Edition specifies the Rust compiler features available to this crate.
edition = "2021"

[dependencies]
# solana-program provides the core runtime interface for writing on-chain programs.
solana-program = "1.18.0"
# borsh enables binary serialization and deserialization of account state structs.
borsh = "1.4.0"
# borsh-derive provides procedural macros for deriving BorshSerialize and BorshDeserialize traits.
borsh-derive = "1.4.0"
# thiserror simplifies custom error definitions with derived Display and From implementations.
thiserror = "1.0.58"
# spl-token provides types and instructions for interacting with SPL token accounts on Solana.
spl-token = "4.0.0"
# spl-associated-token-account provides helpers for creating and validating ATA addresses.
spl-associated-token-account = "2.3.0"
# solana-sdk is included for additional helper types used in client-side and program-side code.
solana-sdk = "1.18.0"

[lib]
# crate-type cdylib produces a dynamic library that the Solana runtime loads as a BPF program.
crate-type = ["cdylib", "lib"]
