[package]
name = "phase55-boost"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
borsh = "1.2"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
